--- a/html/index.html
+++ b/html/index.html
@@ -15,64 +15,24 @@
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
-    <section class="feature">
-      <header class="feature__header">
-        <h2>Why choose Easybank?</h2>
-        <p class="paragraph__header">
-          We leverage Open Banking to turn your bank account into your financial
-          hub. Control your finances like never before.
+    <article class="card__article card__article--skin">
+      <picture>
+        <source type="image/webp" srcset="/images/image-currency.webp" />
+        <source type="image/jpg" srcset="/images/image-currency.jpg" />
+        <img
+          class="images__article"
+          src="/images/image-currency.jpg"
+          alt="A pile of currency from various countries."
+        />
+      </picture>
+      <div class="card__article__body">
+        <address rel="author">By Claire Robinson</address>
+        <h4>Receive money in any currency with no fees</h4>
+        <p class="paragraph__article">
+          The world is getting smaller and we’re becoming more mobile. So why
+          should you be forced to only receive money in a single …
         </p>
-      </header>
-      <div class="grid grid--1x2 grid--1x3">
-        <div class="card__feature">
-          <span class="icon-container">
-            <svg class="icon icon--primary">
-              <use href="/images/icon-online.svg"></use>
-            </svg>
-          </span>
-          <h3>Online Banking</h3>
-          <p class="paragraph__feature">
-            Our modern web and mobile applications allow you to keep track of
-            your finances wherever you are in the world.
-          </p>
-        </div>
-        <div class="card__feature">
-          <span class="icon-container">
-            <svg class="icon icon--primary">
-              <use href="/images/icon-online.svg"></use>
-            </svg>
-          </span>
-          <h3>Simple Budgeting</h3>
-          <p class="paragraph__feature">
-            See exactly where your money goes each month. Receive notifications
-            when you’re close to your hitting limits.
-          </p>
-        </div>
-        <div class="card__feature">
-          <span class="icon-container">
-            <svg class="icon icon--primary">
-              <use href="/images/icon-online.svg"></use>
-            </svg>
-          </span>
-          <h3>Fast Onboarding</h3>
-          <p class="paragraph__feature">
-            We don’t do branches. Open your account in minutes online and start
-            taking control of your finances right away.
-          </p>
-        </div>
-        <div class="card__feature">
-          <span class="icon-container">
-            <svg class="icon icon--primary">
-              <use href="/images/icon-online.svg"></use>
-            </svg>
-          </span>
-          <h3>Open API</h3>
-          <p class="paragraph__feature">
-            Manage your savings, investments, pension, and much more from one
-            account. Tracking your money has never been easier.
-          </p>
-        </div>
       </div>
-    </section>
+    </article>
   </body>
 </html>
