--- a/html/index.html
+++ b/html/index.html
@@ -15,89 +15,18 @@
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
-    <article class="article__block">
-      <header class="article__header">
-        <h2>Latest Articles</h2>
-      </header>
-      <div class="grid grid--1x2 grid--1x3">
-        <article class="card__article card__article--skin">
-          <picture>
-            <source type="image/webp" srcset="/images/image-currency.webp" />
-            <source type="image/jpg" srcset="/images/image-currency.jpg" />
-            <img
-              class="images__article"
-              src="/images/image-currency.jpg"
-              alt="A pile of currency from various countries."
-            />
-          </picture>
-          <div class="card__article__body">
-            <address rel="author">By Claire Robinson</address>
-            <h4><a href="#">Receive money in any currency with no fees</a></h4>
-            <p class="paragraph__article">
-              The world is getting smaller and we’re becoming more mobile. So
-              why should you be forced to only receive money in a single …
-            </p>
-          </div>
-        </article>
-        <article class="card__article card__article--skin">
-          <picture>
-            <source type="image/webp" srcset="/images/image-restaurant.webp" />
-            <source type="image/jpg" srcset="/images/image-restaurant.jpg" />
-            <img
-              class="images__article"
-              src="/images/image-currency.jpg"
-              alt="A pile of currency from various countries."
-            />
-          </picture>
-          <div class="card__article__body">
-            <address rel="author">By Wilson Hutton</address>
-            <h4><a href="#">Treat yourself without worrying about money</a></h4>
-            <p class="paragraph__article">
-              Our simple budgeting feature allows you to separate out your
-              spending and set realistic limits each month. That means you …
-            </p>
-          </div>
-        </article>
-        <article class="card__article card__article--skin">
-          <picture>
-            <source type="image/webp" srcset="/images/image-plane.webp" />
-            <source type="image/jpg" srcset="/images/image-plane.jpg" />
-            <img
-              class="images__article"
-              src="/images/image-plane.jpg"
-              alt="A pile of currency from various countries."
-            />
-          </picture>
-          <div class="card__article__body">
-            <address rel="author">By Wilson Hutton</address>
-            <h4><a href="#">Take your Easybank card wherever you go</a></h4>
-            <p class="paragraph__article">
-              We want you to enjoy your travels. This is why we don’t charge any
-              fees on purchases while you’re abroad. We’ll even show you …
-            </p>
-          </div>
-        </article>
-        <article class="card__article card__article--skin">
-          <picture>
-            <source type="image/webp" srcset="/images/image-confetti.webp" />
-            <source type="image/jpg" srcset="/images/image-confetti.jpg" />
-            <img
-              class="images__article"
-              src="/images/image-confetti.jpg"
-              alt="A pile of currency from various countries."
-            />
-          </picture>
-          <div class="card__article__body">
-            <address rel="author">By Claire Robinson</address>
-            <h4><a href="#">Our invite-only Beta accounts are now live!</a></h4>
-            <p class="paragraph__article">
-              After a lot of hard work by the whole team, we’re excited to
-              launch our closed beta. It’s easy to request an invite through the
-              site ...
-            </p>
-          </div>
-        </article>
-      </div>
-    </article>
+    <nav class="nav">
+      <img src="/images/logo.svg" alt="Easybank" />
+      <ul class="list">
+        <li class="nav__item"><a href="#">Home</a></li>
+        <li class="nav__item"><a href="#">About</a></li>
+        <li class="nav__item"><a href="#">Contact</a></li>
+        <li class="nav__item"><a href="#">Blog</a></li>
+        <li class="nav__item"><a href="#">Careers</a></li>
+      </ul>
+      <button type="button" class="btn btn--primary-gradient">
+        Request Invite
+      </button>
+    </nav>
   </body>
 </html>
