--- a/html/index.html
+++ b/html/index.html
@@ -15,18 +15,26 @@
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
-    <nav class="nav">
-      <img src="/images/logo.svg" alt="Easybank" />
-      <ul class="list">
-        <li class="nav__item"><a href="#">Home</a></li>
-        <li class="nav__item"><a href="#">About</a></li>
-        <li class="nav__item"><a href="#">Contact</a></li>
-        <li class="nav__item"><a href="#">Blog</a></li>
-        <li class="nav__item"><a href="#">Careers</a></li>
-      </ul>
-      <button type="button" class="btn btn--primary-gradient">
-        Request Invite
-      </button>
+    <nav class="nav collapsible collapsible--expanded">
+      <img src="/images/logo.svg" alt="Easybank Logo" />
+      <img
+        class="collapsible__hamburger-icon"
+        src="/images/icon-hamburger.svg"
+        alt="Navigation Toggler"
+      />
+      <div class="collapsible__content">
+        <ul class="list nav__list-container">
+          <li class="nav__item"><a href="#">Home</a></li>
+          <li class="nav__item"><a href="#">About</a></li>
+          <li class="nav__item"><a href="#">Contact</a></li>
+          <li class="nav__item"><a href="#">Blog</a></li>
+          <li class="nav__item"><a href="#">Careers</a></li>
+        </ul>
+        <button type="button" class="btn btn--primary-gradient btn--nav">
+          Request Invite
+        </button>
+      </div>
     </nav>
+    <script src="/js/main.js"></script>
   </body>
 </html>
