Footer component built. Issue-supplied svg icons.

--- a/html/index.html
+++ b/html/index.html
@@ -15,26 +15,23 @@
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
-    <nav class="nav collapsible collapsible--expanded">
-      <img src="/images/logo.svg" alt="Easybank Logo" />
-      <img
-        class="collapsible__hamburger-icon"
-        src="/images/icon-hamburger.svg"
-        alt="Navigation Toggler"
-      />
-      <div class="collapsible__content">
-        <ul class="list nav__list-container">
-          <li class="nav__item"><a href="#">Home</a></li>
-          <li class="nav__item"><a href="#">About</a></li>
-          <li class="nav__item"><a href="#">Contact</a></li>
-          <li class="nav__item"><a href="#">Blog</a></li>
-          <li class="nav__item"><a href="#">Careers</a></li>
-        </ul>
-        <button type="button" class="btn btn--primary-gradient btn--nav">
-          Request Invite
-        </button>
-      </div>
-    </nav>
+    <footer class="grid grid--1x2 grid--1x3 footer">
+      <svg class="icon icon--white">
+        <use href="/images/logo.svg"></use>
+      </svg>
+      <ul class="list footer__list">
+        <li class="footer__item"><a href="#">About Us</a></li>
+        <li class="footer__item"><a href="#">Contact</a></li>
+        <li class="footer__item"><a href="#">Blog</a></li>
+        <li class="footer__item"><a href="#">Careers</a></li>
+        <li class="footer__item"><a href="#">Support</a></li>
+        <li class="footer__item"><a href="#">Privacy Policy</a></li>
+      </ul>
+      <button type="button" class="btn btn--primary-gradient">
+        Request Invite
+      </button>
+      <p class="paragraph__footer">&copy; Easybank. All Rights Reserved</p>
+    </footer>
     <script src="/js/main.js"></script>
   </body>
 </html>
