--- a/html/index.html
+++ b/html/index.html
@@ -15,23 +15,24 @@
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
-    <footer class="grid grid--1x2 grid--1x3 footer">
-      <svg class="icon icon--white">
-        <use href="/images/logo.svg"></use>
-      </svg>
-      <ul class="list footer__list">
-        <li class="footer__item"><a href="#">About Us</a></li>
-        <li class="footer__item"><a href="#">Contact</a></li>
-        <li class="footer__item"><a href="#">Blog</a></li>
-        <li class="footer__item"><a href="#">Careers</a></li>
-        <li class="footer__item"><a href="#">Support</a></li>
-        <li class="footer__item"><a href="#">Privacy Policy</a></li>
-      </ul>
-      <button type="button" class="btn btn--primary-gradient">
-        Request Invite
-      </button>
-      <p class="paragraph__footer">&copy; Easybank. All Rights Reserved</p>
-    </footer>
+    <section class="hero__image">
+      <div class="grid grid--1x2 grid--1x3"></div>
+          <div class="image-mockup-container">
+            <img class="image-mockup" src="/images/image-mockups.png" alt="" />
+          </div>
+        <div class="hero__content">
+          <h1>Next generation digital banking</h1>
+          <p class="paragraph__header">
+            Take your financial life online. Your Easybank account will be a
+            one-stop-shop for spending, saving, budgeting, investing, and much
+            more.
+          </p>
+          <button type="button" class="btn btn--primary-gradient">
+            Request Invite
+          </button>
+        </div>
+      </div>
+    </section>
     <script src="/js/main.js"></script>
   </body>
 </html>
