--- a/html/index.html
+++ b/html/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
+    <!-- Hero -->
     <header class="hero">
       <nav class="nav collapsible collapsible--expanded">
         <img src="/images/logo.svg" alt="Easybank Logo" />
@@ -37,7 +38,7 @@
         </div>
       </nav>
       <section class="hero__image">
-        <div class="grid grid--1x2 grid--1x3"></div>
+        <div class="grid grid--1x2 grid--1x4"></div>
             <div class="image-mockup-container">
               <img class="image-mockup" src="/images/image-mockups.png" alt="" />
             </div>
@@ -55,6 +56,162 @@
         </div>
       </section>
     </header>
+    <!-- Feature Section-->
+    <section class="feature">
+      <header class="feature__header">
+        <h2>Why choose Easybank?</h2>
+        <p class="paragraph__header">
+          We leverage Open Banking to turn your bank account into your financial
+          hub. Control your finances like never before.
+        </p>
+      </header>
+      <div class="grid grid--1x2 grid--1x4">
+        <div class="card__feature">
+          <span class="icon-container">
+            <img src="/images/icon-online.svg" alt="">
+          </span>
+          <h3>Online Banking</h3>
+          <p class="paragraph__feature">
+            Our modern web and mobile applications allow you to keep track of your
+            finances wherever you are in the world.
+          </p>
+        </div>
+        <div class="card__feature">
+          <span class="icon-container">
+            <img src="/images/icon-budgeting.svg" alt="">
+          </span>
+          <h3>Simple Budgeting</h3>
+          <p class="paragraph__feature">
+            See exactly where your money goes each month. Receive notifications when
+            you’re close to your hitting limits.
+          </p>
+        </div>
+        <div class="card__feature">
+          <span class="icon-container">
+            <img src="/images/icon-onboarding.svg" alt="">
+          </span>
+          <h3>Fast Onboarding</h3>
+          <p class="paragraph__feature">
+            We don’t do branches. Open your account in minutes online and start
+            taking control of your finances right away.
+          </p>
+        </div>
+        <div class="card__feature">
+          <span class="icon-container">
+            <img src="/images/icon-api.svg" alt="">
+          </span>
+          <h3>Open API</h3>
+          <p class="paragraph__feature">
+            Manage your savings, investments, pension, and much more from one
+            account. Tracking your money has never been easier.
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- Article Section -->
+    <article class="article__block">
+      <header class="article__header">
+        <h2>Latest Articles</h2>
+      </header>
+      <div class="grid grid--1x2 grid--1x4">
+        <article class="card__article">
+          <picture>
+            <source type="image/webp" srcset="/images/image-currency.webp" />
+            <source type="image/jpg" srcset="/images/image-currency.jpg" />
+            <img
+              class="images__article"
+              src="/images/image-currency.jpg"
+              alt="A pile of currency from various countries."
+            />
+          </picture>
+          <div class="card__article__body">
+            <address rel="author">By Claire Robinson</address>
+            <h4><a href="#">Receive money in any currency with no fees</a></h4>
+            <p class="paragraph__article">
+              The world is getting smaller and we’re becoming more mobile. So why
+              should you be forced to only receive money in a single …
+            </p>
+          </div>
+        </article>
+        <article class="card__article">
+          <picture>
+            <source type="image/webp" srcset="/images/image-restaurant.webp" />
+            <source type="image/jpg" srcset="/images/image-restaurant.jpg" />
+            <img
+              class="images__article"
+              src="/images/image-currency.jpg"
+              alt="A pile of currency from various countries."
+            />
+          </picture>
+          <div class="card__article__body">
+            <address rel="author">By Wilson Hutton</address>
+            <h4><a href="#">Treat yourself without worrying about money</a></h4>
+            <p class="paragraph__article">
+              Our simple budgeting feature allows you to separate out your spending
+              and set realistic limits each month. That means you …
+            </p>
+          </div>
+        </article>
+        <article class="card__article">
+          <picture>
+            <source type="image/webp" srcset="/images/image-plane.webp" />
+            <source type="image/jpg" srcset="/images/image-plane.jpg" />
+            <img
+              class="images__article"
+              src="/images/image-plane.jpg"
+              alt="A pile of currency from various countries."
+            />
+          </picture>
+          <div class="card__article__body">
+            <address rel="author">By Wilson Hutton</address>
+            <h4><a href="#">Take your Easybank card wherever you go</a></h4>
+            <p class="paragraph__article">
+              We want you to enjoy your travels. This is why we don’t charge any
+              fees on purchases while you’re abroad. We’ll even show you …
+            </p>
+          </div>
+        </article>
+        <article class="card__article">
+          <picture>
+            <source type="image/webp" srcset="/images/image-confetti.webp" />
+            <source type="image/jpg" srcset="/images/image-confetti.jpg" />
+            <img
+              class="images__article"
+              src="/images/image-confetti.jpg"
+              alt="A pile of currency from various countries."
+            />
+          </picture>
+          <div class="card__article__body">
+            <address rel="author">By Claire Robinson</address>
+            <h4><a href="#">Our invite-only Beta accounts are now live!</a></h4>
+            <p class="paragraph__article">
+              After a lot of hard work by the whole team, we’re excited to launch
+              our closed beta. It’s easy to request an invite through the site ...
+            </p>
+          </div>
+        </article>
+      </div>
+    </article>
+    <!-- Footer -->
+    <footer class="footer ">
+      <div class="grid grid--1x2 grid--1x3">
+        <svg class="icon icon--white">
+          <use href="/images/logo.svg"></use>
+        </svg>
+        <ul class="list footer__list">
+          <li class="footer__item"><a href="#">About Us</a></li>
+          <li class="footer__item"><a href="#">Contact</a></li>
+          <li class="footer__item"><a href="#">Blog</a></li>
+          <li class="footer__item"><a href="#">Careers</a></li>
+          <li class="footer__item"><a href="#">Support</a></li>
+          <li class="footer__item"><a href="#">Privacy Policy</a></li>
+        </ul>
+        <button type="button" class="btn btn--primary-gradient">
+          Request Invite
+        </button>
+        <p class="paragraph__footer">&copy; Easybank. All Rights Reserved</p>
+      </div>
+    </footer>
     <script src="/js/main.js"></script>
   </body>
 </html>
