Adjusted the card and header styles.

--- a/html/index.html
+++ b/html/index.html
@@ -37,24 +37,26 @@
           </button>
         </div>
       </nav>
-      <section class="hero__image">
-        <div class="grid grid--1x2 grid--1x4"></div>
-            <div class="image-mockup-container">
-              <img class="image-mockup" src="/images/image-mockups.png" alt="" />
+      <div class="hero__content-container">
+        <section class="hero__image">
+          <div class="grid grid--1x2 grid--1x4"></div>
+              <div class="image-mockup-container">
+                <img class="image-mockup" src="/images/image-mockups.png" alt="" />
+              </div>
+            <div class="hero__content">
+              <h1>Next generation digital banking</h1>
+              <p class="paragraph__header">
+                Take your financial life online. Your Easybank account will be a
+                one-stop-shop for spending, saving, budgeting, investing, and much
+                more.
+              </p>
+              <button type="button" class="btn btn--primary-gradient">
+                Request Invite
+              </button>
             </div>
-          <div class="hero__content">
-            <h1>Next generation digital banking</h1>
-            <p class="paragraph__header">
-              Take your financial life online. Your Easybank account will be a
-              one-stop-shop for spending, saving, budgeting, investing, and much
-              more.
-            </p>
-            <button type="button" class="btn btn--primary-gradient">
-              Request Invite
-            </button>
           </div>
-        </div>
-      </section>
+        </section>
+      </div>
     </header>
     <!-- Feature Section-->
     <section class="feature">
