--- a/html/index.html
+++ b/html/index.html
@@ -196,19 +196,24 @@
     </article>
     <!-- Footer -->
     <footer class="footer ">
-      <div class="grid grid--1x2 grid--1x3">
-        <svg class="icon icon--white">
-          <use href="/images/logo.svg"></use>
-        </svg>
-        <ul class="list footer__list">
-          <li class="footer__item"><a href="#">About Us</a></li>
-          <li class="footer__item"><a href="#">Contact</a></li>
-          <li class="footer__item"><a href="#">Blog</a></li>
-          <li class="footer__item"><a href="#">Careers</a></li>
-          <li class="footer__item"><a href="#">Support</a></li>
-          <li class="footer__item"><a href="#">Privacy Policy</a></li>
-        </ul>
-        <button type="button" class="btn btn--primary-gradient">
+      <div class="grid flex__footer">
+       <div class="footer__logo">
+         <img src="/images/logo-white.svg" alt="Easybank Logo">
+       </div>
+       <div class="footer__icons">
+         <a href="#"><img src="/images/social-media-icons.svg" alt=""></a>
+      </div>
+        <section class="footer__list">
+          <ul class="list footer__list--section-1">
+            <li class="footer__item footer__item--first"><a href="#">About Us</a></li>
+            <li class="footer__item"><a href="#">Contact</a></li>
+            <li class="footer__item"><a href="#">Blog</a></li>
+            <li class="footer__item"><a href="#">Careers</a></li>
+            <li class="footer__item"><a href="#">Support</a></li>
+            <li class="footer__item"><a href="#">Privacy Policy</a></li>
+          </ul>
+        </section>
+        <button type="button" class="btn btn--primary-gradient btn__footer">
           Request Invite
         </button>
         <p class="paragraph__footer">&copy; Easybank. All Rights Reserved</p>
