--- a/playground.html
+++ b/playground.html
@@ -1,10 +1,45 @@
-<section class="features">
-  <div class="grid">
-    <h2>Why choose Easybank?</h2>
-    <p class="paragraph--primary">
-      We leverage Open Banking to turn your bank account into your financial
-      hub. Control your finances like never before.
-    </p>
-  </div>
-  <div class="card__features"></div>
-</section>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/css/normalize.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
+  </head>
+  <body>
+    <header class="hero">
+      <nav class="nav">
+        <img src="/images/logo.svg" alt="Easybank Logo" />
+        <button id="openModalImage" class="btn__modal-open">
+          <img src="/images/icon-hamburger.svg" alt="Navigation Toggler" />
+        </button>
+        <button id="closeModalImage" class="btn__modal-close">
+          <img src="/images/icon-close.svg" alt="Close Navigation Menu" />
+        </button>
+        <div class="modal" id="navModal">
+          <div class="modal__content">
+            <ul class="list">
+              <li class="nav__item"><a href="#">Home</a></li>
+              <li class="nav__item"><a href="#">About</a></li>
+              <li class="nav__item"><a href="#">Contact</a></li>
+              <li class="nav__item"><a href="#">Blog</a></li>
+              <li class="nav__item"><a href="#">Careers</a></li>
+            </ul>
+          </div>
+        </div>
+        <button type="button" class="btn btn--primary-gradient btn--nav">
+          Request Invite
+        </button>
+      </nav>
+    </header>
+    <script src="/js/main.js"></script>
+  </body>
+</html>
