--- a/playground.html
+++ b/playground.html
@@ -16,29 +16,51 @@
   </head>
   <body>
     <header class="hero">
-      <nav class="nav">
-        <img src="/images/logo.svg" alt="Easybank Logo" />
-        <button id="openModalImage" class="btn__modal-open">
-          <img src="/images/icon-hamburger.svg" alt="Navigation Toggler" />
-        </button>
-        <button id="closeModalImage" class="btn__modal-close">
-          <img src="/images/icon-close.svg" alt="Close Navigation Menu" />
-        </button>
-        <div class="modal" id="navModal">
-          <div class="modal__content">
-            <ul class="list">
-              <li class="nav__item"><a href="#">Home</a></li>
-              <li class="nav__item"><a href="#">About</a></li>
-              <li class="nav__item"><a href="#">Contact</a></li>
-              <li class="nav__item"><a href="#">Blog</a></li>
-              <li class="nav__item"><a href="#">Careers</a></li>
-            </ul>
+      <div class="nav-container">
+        <nav class="nav">
+          <img
+            class="easybank-icon"
+            src="/images/logo.svg"
+            alt="Easybank Logo"
+          />
+          <button id="openModalImage" class="btn btn__modal--open">
+            <img src="/images/icon-hamburger.svg" alt="Navigation Toggler" />
+          </button>
+          <button id="closeModalImage" class="btn btn__modal--close">
+            <img src="/images/icon-close.svg" alt="Close Navigation Menu" />
+          </button>
+          <div class="modal" id="navModal">
+            <div class="modal__content">
+              <ul class="list">
+                <li class="nav__item"><a href="#">Home</a></li>
+                <li class="nav__item"><a href="#">About</a></li>
+                <li class="nav__item"><a href="#">Contact</a></li>
+                <li class="nav__item"><a href="#">Blog</a></li>
+                <li class="nav__item"><a href="#">Careers</a></li>
+              </ul>
+            </div>
+          </div>
+          <button type="button" class="btn btn--primary-gradient btn--nav">
+            Request Invite
+          </button>
+        </nav>
+      </div>
+      <section class="hero__content-container">
+        <div class="hero__image">
+          <img class="image-mockup" src="/images/image-mockups.png" alt="" />
+          <div class="hero__content">
+            <h1>Next generation digital banking</h1>
+            <p class="paragraph__header">
+              Take your financial life online. Your Easybank account will be a
+              one-stop-shop for spending, saving, budgeting, investing, and much
+              more.
+            </p>
+            <button type="button" class="btn btn--primary-gradient">
+              Request Invite
+            </button>
           </div>
         </div>
-        <button type="button" class="btn btn--primary-gradient btn--nav">
-          Request Invite
-        </button>
-      </nav>
+      </section>
     </header>
     <script src="/js/main.js"></script>
   </body>
