--- a/html/index.html
+++ b/html/index.html
@@ -16,13 +16,18 @@
   </head>
   <body>
     <!-- Hero -->
-    <header class="hero">
+    <header>
+      <div class="nav-container">
         <nav class="nav">
-          <img src="/images/logo.svg" alt="Easybank Logo" />
-          <button id="openModalImage" class="btn__modal-open">
+          <img
+            class="easybank-icon"
+            src="/images/logo.svg"
+            alt="Easybank Logo"
+          />
+          <button id="openModalImage" class="btn btn__modal--open">
             <img src="/images/icon-hamburger.svg" alt="Navigation Toggler" />
           </button>
-          <button id="closeModalImage" class="btn__modal-close">
+          <button id="closeModalImage" class="btn btn__modal--close">
             <img src="/images/icon-close.svg" alt="Close Navigation Menu" />
           </button>
           <div class="modal" id="navModal">
@@ -40,26 +45,23 @@
             Request Invite
           </button>
         </nav>
-      <div class="hero__content-container">
-        <section class="hero__image">
-          <div class="grid grid--1x2 grid--1x4"></div>
-              <div class="image-mockup-container">
-                <img class="image-mockup" src="/images/image-mockups.png" alt="" />
-              </div>
-            <div class="hero__content">
-              <h1>Next generation digital banking</h1>
-              <p class="paragraph__header">
-                Take your financial life online. Your Easybank account will be a
-                one-stop-shop for spending, saving, budgeting, investing, and much
-                more.
-              </p>
-              <button type="button" class="btn btn--primary-gradient">
-                Request Invite
-              </button>
-            </div>
-          </div>
-        </section>
       </div>
+      <section class="hero__content-container">
+        <div class="hero__image">
+          <img class="image-mockup" src="/images/image-mockups.png" alt="" />
+          <div class="hero__content">
+            <h1>Next generation digital banking</h1>
+            <p class="paragraph__header">
+              Take your financial life online. Your Easybank account will be a
+              one-stop-shop for spending, saving, budgeting, investing, and much
+              more.
+            </p>
+            <button type="button" class="btn btn--primary-gradient">
+              Request Invite
+            </button>
+          </div>
+        </div>
+      </section>
     </header>
     <!-- Feature Section-->
     <section class="feature">
@@ -73,27 +75,27 @@
       <div class="grid grid--1x2 grid--1x4">
         <div class="card__feature">
           <span class="icon-container">
-            <img src="/images/icon-online.svg" alt="">
+            <img src="/images/icon-online.svg" alt="" />
           </span>
           <h3>Online Banking</h3>
           <p class="paragraph__feature">
-            Our modern web and mobile applications allow you to keep track of your
-            finances wherever you are in the world.
+            Our modern web and mobile applications allow you to keep track of
+            your finances wherever you are in the world.
           </p>
         </div>
         <div class="card__feature">
           <span class="icon-container">
-            <img src="/images/icon-budgeting.svg" alt="">
+            <img src="/images/icon-budgeting.svg" alt="" />
           </span>
           <h3>Simple Budgeting</h3>
           <p class="paragraph__feature">
-            See exactly where your money goes each month. Receive notifications when
-            you’re close to your hitting limits.
+            See exactly where your money goes each month. Receive notifications
+            when you’re close to your hitting limits.
           </p>
         </div>
         <div class="card__feature">
           <span class="icon-container">
-            <img src="/images/icon-onboarding.svg" alt="">
+            <img src="/images/icon-onboarding.svg" alt="" />
           </span>
           <h3>Fast Onboarding</h3>
           <p class="paragraph__feature">
@@ -103,7 +105,7 @@
         </div>
         <div class="card__feature">
           <span class="icon-container">
-            <img src="/images/icon-api.svg" alt="">
+            <img src="/images/icon-api.svg" alt="" />
           </span>
           <h3>Open API</h3>
           <p class="paragraph__feature">
@@ -133,8 +135,8 @@
             <address rel="author">By Claire Robinson</address>
             <h4><a href="#">Receive money in any currency with no fees</a></h4>
             <p class="paragraph__article">
-              The world is getting smaller and we’re becoming more mobile. So why
-              should you be forced to only receive money in a single …
+              The world is getting smaller and we’re becoming more mobile. So
+              why should you be forced to only receive money in a single …
             </p>
           </div>
         </article>
@@ -152,8 +154,8 @@
             <address rel="author">By Wilson Hutton</address>
             <h4><a href="#">Treat yourself without worrying about money</a></h4>
             <p class="paragraph__article">
-              Our simple budgeting feature allows you to separate out your spending
-              and set realistic limits each month. That means you …
+              Our simple budgeting feature allows you to separate out your
+              spending and set realistic limits each month. That means you …
             </p>
           </div>
         </article>
@@ -190,25 +192,28 @@
             <address rel="author">By Claire Robinson</address>
             <h4><a href="#">Our invite-only Beta accounts are now live!</a></h4>
             <p class="paragraph__article">
-              After a lot of hard work by the whole team, we’re excited to launch
-              our closed beta. It’s easy to request an invite through the site ...
+              After a lot of hard work by the whole team, we’re excited to
+              launch our closed beta. It’s easy to request an invite through the
+              site ...
             </p>
           </div>
         </article>
       </div>
     </article>
     <!-- Footer -->
-    <footer class="footer ">
+    <footer class="footer">
       <div class="grid flex__footer">
-       <div class="footer__logo">
-         <img src="/images/logo-white.svg" alt="Easybank Logo">
-       </div>
-       <div class="footer__icons">
-         <a href="#"><img src="/images/social-media-icons.svg" alt=""></a>
-      </div>
+        <div class="footer__logo">
+          <img src="/images/logo-white.svg" alt="Easybank Logo" />
+        </div>
+        <div class="footer__icons">
+          <a href="#"><img src="/images/social-media-icons.svg" alt="" /></a>
+        </div>
         <section class="footer__list">
           <ul class="list footer__list--section-1">
-            <li class="footer__item footer__item--first"><a href="#">About Us</a></li>
+            <li class="footer__item footer__item--first">
+              <a href="#">About Us</a>
+            </li>
             <li class="footer__item"><a href="#">Contact</a></li>
             <li class="footer__item"><a href="#">Blog</a></li>
             <li class="footer__item"><a href="#">Careers</a></li>
@@ -220,6 +225,9 @@
           Request Invite
         </button>
         <p class="paragraph__footer">&copy; Easybank. All Rights Reserved</p>
+        <p class="paragraph__footer--attribution">
+          Design by Frontend Mentor. Coded by Psoccrates Stansberry.
+        </p>
       </div>
     </footer>
     <script src="/js/main.js"></script>
