--- a/playground.html
+++ b/playground.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
-    <header class="hero">
+    <header>
       <div class="nav-container">
         <nav class="nav">
           <img
