--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="Easybank Landing Page, Frontend Mentor, Challenge Complete, Portfolio, HTML, Vanilla CSS, Vanilla JavaScript"
+    />
+    <meta
+      name="description"
+      content="Easybank Landing Page challenge completed by Psoccrates Stansberry"
+    />
     <title>Easybank</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
