--- a/html/index.html
+++ b/html/index.html
@@ -33,10 +33,18 @@
             alt="Easybank Logo"
           />
           <button id="openModalImage" class="btn btn__modal--open">
-            <img src="/images/icon-hamburger.svg" alt="Navigation Toggler" />
+            <img
+              class="modal-icon--open"
+              src="/images/icon-hamburger.svg"
+              alt="Navigation Toggler"
+            />
           </button>
           <button id="closeModalImage" class="btn btn__modal--close">
-            <img src="/images/icon-close.svg" alt="Close Navigation Menu" />
+            <img
+              class="modal-icon--close"
+              src="/images/icon-close.svg"
+              alt="Close Navigation Menu"
+            />
           </button>
           <div class="modal" id="navModal">
             <div class="modal__content">
