--- a/html/index.html
+++ b/html/index.html
@@ -89,7 +89,7 @@
         </p>
       </header>
       <div class="grid grid--1x2 grid--1x4">
-        <div class="card__feature">
+        <article class="card__feature">
           <span class="icon-container">
             <img src="/images/icon-online.svg" alt="" />
           </span>
@@ -98,8 +98,8 @@
             Our modern web and mobile applications allow you to keep track of
             your finances wherever you are in the world.
           </p>
-        </div>
-        <div class="card__feature">
+        </article>
+        <article class="card__feature">
           <span class="icon-container">
             <img src="/images/icon-budgeting.svg" alt="" />
           </span>
@@ -108,8 +108,8 @@
             See exactly where your money goes each month. Receive notifications
             when you’re close to your hitting limits.
           </p>
-        </div>
-        <div class="card__feature">
+        </article>
+        <article class="card__feature">
           <span class="icon-container">
             <img src="/images/icon-onboarding.svg" alt="" />
           </span>
@@ -118,8 +118,8 @@
             We don’t do branches. Open your account in minutes online and start
             taking control of your finances right away.
           </p>
-        </div>
-        <div class="card__feature">
+        </article>
+        <article class="card__feature">
           <span class="icon-container">
             <img src="/images/icon-api.svg" alt="" />
           </span>
@@ -128,7 +128,7 @@
             Manage your savings, investments, pension, and much more from one
             account. Tracking your money has never been easier.
           </p>
-        </div>
+        </article>
       </div>
     </section>
     <!-- Article Section -->
@@ -241,11 +241,8 @@
           Request Invite
         </button>
         <p class="paragraph__footer">&copy; Easybank. All Rights Reserved</p>
-        <p class="paragraph__footer--attribution">
-          Design by Frontend Mentor. Coded by Psoccrates Stansberry.
-        </p>
       </div>
     </footer>
-    <script src="/js/main.js"></script>
+    <script src="/src/main.js"></script>
   </body>
 </html>
